[project]
name = "pyinject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
authors = [
    { name = "Pavel Novoidarskii", email = "sorvihead1@gmail.com" }
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "ANN", "C4"]
ignore = ["ANN002", "ANN003", "ANN204"]